@@ -52,11 +52,12 @@ where XXXXXX is the bug number as listed below.
 354797  Added vbit tester support for PPC 64 isa 2.07 iops
 354933  Fix documentation of --kernel-variant=android-no-hw-tls option
 355188  valgrind should intercept all malloc related global functions
-355455  expected stderr of test cases wrapmalloc and wrapmallocstatic overconstrained
+355455  stderr.exp of test cases wrapmalloc and wrapmallocstatic overconstrained
 355454  do not intercept malloc related symbols from the runtime linker
 356044  Dwarf line info reader misinterprets is_stmt register
 
 n-i-bz Fix incorrect (or infinite loop) unwind on RHEL7 x86 32 bits
+n-i-bz massif --pages-as-heap=yes does not report peak caused by mmap+munmap
 
 Release 3.11.0 (22 September 2015)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
